2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' property descriptions.
	Changed intitial values of 'mask-box-image' properties to match WebKit.

2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' properties, description follows.
	Changed pseudo-stacking-context to stacking context.

2012-08-12 dschulze@adobe.com
	Add 'clip-path' to specification uppen a request of the SVG WG.

2012-08-12 dschulze@adobe.com
	Created new sections for Mask and Mask Box Image.

2012-08-12 dschulze@adobe.com
	Added more images.

2012-08-12 dschulze@adobe.com
	More clarification on used terms.

2012-08-11 dschulze@adobe.com
	Changed syntax for 'mask' and other properties to fit initial intention.

2012-08-11 dschulze@adobe.com
	Added 'The Masking Rendering Model' section.

2012-08-11 dschulze@adobe.com
	Mask sources can not be stacked to a mask layer.

2012-08-11 dschulze@adobe.com
    Make 'mask' shorthand property.

2012-08-11 dschulze@adobe.com
    Fixed typo on 'mask-origin'.

2012-08-11 dschulze@adobe.com
    Added 'mask-origin'.

2012-08-11 dschulze@adobe.com
    Added more properties from the implementation of CSS mask in WebKit.

2012-08-10 dschulze@adobe.com
    Create template for CSS Masking.