@@ -101,12 +101,10 @@ Table of contents</h2>
 </p>
 
 <div class="example">
-  <p>
-    Following example uses an image to mask a rectangle.
-  </p>
-  <img src="images/masking/mask01.png" alt="Example Mask">
-  <br>
-  <p><a href="images/masking/mask01.svg">View this example</a> as SVG</p>
+  <div class=figure>
+    <img src="images/luminance-mask.svg" width="655px" height="260px" alt="Example Mask">
+    <p class=caption>A lumniance mask (middle) gets applied on a shape filled with a gradient (left). This results in a masked shape (right).
+  </div>
 </div>
 
 <h2 id="placement">Module interactions</h2>
