@@ -31,14 +31,14 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 13 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 14 August 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20120813/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20120814/-->
 
     <dt>Latest version:
 
@@ -267,10 +267,11 @@
    partially masking out parts of the graphical object.
 
   <div class=example>
-   <p> Following example uses an image to mask a rectangle.</p>
-   <img alt="Example Mask" src="images/masking/mask01.png"> <br>
-
-   <p><a href="images/masking/mask01.svg">View this example</a> as SVG</p>
+   <div class=figure> <img alt="Example Mask" height=260px
+    src="images/luminance-mask.svg" width=655px>
+    <p class=caption>A lumniance mask (middle) gets applied on a shape filled
+     with a gradient (left). This results in a masked shape (right).
+   </div>
   </div>
 
   <h2 id=placement><span class=secno>2. </span>Module interactions</h2>
@@ -3444,7 +3445,7 @@ div {
      user coordinate system for the element referencing the <a
      class=element-name href="#ClipPathElement">‘<code
      class=property>clipPath</code>’</a> element via the <a class=property
-     href="HASH(0x7f95c9848178)">‘<code
+     href="HASH(0x7fe823848178)">‘<code
      class=property>clip-path</code>’</a> property).<br>
      If <span class=attr-value>clipPathUnits="objectBoundingBox"</span>, then
      the user coordinate system for the contents of the <a class=element-name
@@ -3472,9 +3473,9 @@ div {
   <p><a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are never rendered
    directly; their only usage is as something that can be referenced using
-   the <a class=property href="HASH(0x7f95c9848178)">‘<code
+   the <a class=property href="HASH(0x7fe823848178)">‘<code
    class=property>clip-path</code>’</a> property. The <a class=property
-   href="HASH(0x7f95c9847e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7fe823847e30)">‘<code class=property>display</code>’</a>
    property does not apply to the <a class=element-name
    href="#ClipPathElement">‘<code class=property>clipPath</code>’</a>
    element; thus, <a class=element-name href="#ClipPathElement">‘<code
@@ -3484,7 +3485,7 @@ div {
    class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are available for
    referencing even when the <a class=property
-   href="HASH(0x7f95c9847e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7fe823847e30)">‘<code class=property>display</code>’</a>
    property on the <a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> element or any of its ancestors is
    set to <a class=prop-value href="#none">none</a>.
