@@ -1,3 +1,6 @@
+2012-08-14 dschulze@adobe.com
+	Add new example of masking in the intro.
+
 2012-08-13 dschulze@adobe.com
 	Add 'mask-box-image' property descriptions.
 	Changed intitial values of 'mask-box-image' properties to match WebKit.
